--- a/package.json
+++ b/package.json
@@ -8,17 +8,55 @@
     "start": "next start"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
-    "date-fns": "^2.14.0",
+    "@mapbox/rehype-prism": "^0.6.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.0.8",
+    "@tailwindcss/typography": "^0.4.0",
+    "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
-    "next": "9.3.5",
-    "postcss-flexbugs-fixes": "^4.2.1",
+    "mdx-prism": "^0.3.3",
+    "next": "10.0.7",
+    "next-mdx-remote": "^2.1.3",
+    "next-remote-watch": "^0.3.0",
+    "next-seo": "^4.20.0",
+    "preact": "^10.5.12",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-live": "^2.2.3",
+    "reading-time": "^1.3.0",
+    "remark": "^13.0.0",
+    "remark-autolink-headings": "^6.0.1",
+    "remark-code-titles": "^0.1.1",
+    "remark-html": "^13.0.1",
+    "remark-slug": "^6.0.0",
+    "tailwindcss": "^2.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
+    "autoprefixer": "^10.2.4",
+    "babel-eslint": "^10.1.0",
+    "date-fns": "^2.21.3",
+    "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "globby": "^11.0.2",
+    "husky": "^5.1.1",
+    "image-size": "^0.9.4",
+    "lint-staged": "^10.5.4",
+    "postcss": "^8.2.6",
     "postcss-preset-env": "^6.7.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "remark": "^12.0.0",
-    "remark-html": "^11.0.2",
-    "sass": "^1.26.8",
-    "tailwindcss": "^1.4.6"
+    "prettier": "^2.2.1",
+    "react-icons": "^4.2.0",
+    "rehype": "^11.0.0",
+    "remark-frontmatter": "^3.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-stringify": "^9.0.1",
+    "rss": "^1.2.2",
+    "unified": "^9.2.1",
+    "unist-util-visit": "^2.0.3"
   }
 }
