--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "mdx-prism": "^0.3.3",
-    "next": "10.0.7",
+    "next": "^15.1.6",
     "next-mdx-remote": "^2.1.3",
     "next-remote-watch": "^0.3.0",
     "next-seo": "^4.20.0",
     "preact": "^10.5.12",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-live": "^2.2.3",
     "reading-time": "^1.3.0",
     "remark": "^13.0.0",
