--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.6.0",
-    "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^10.0.8",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tailwindcss/typography": "^0.4.0",
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
-    "mdx-prism": "^0.3.3",
+    "highlight.js": "^11.11.1",
     "next": "^15.1.6",
-    "next-mdx-remote": "^2.1.3",
+    "next-mdx-remote": "^5.0.0",
     "next-remote-watch": "^0.3.0",
     "next-seo": "^4.20.0",
     "preact": "^10.5.12",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-live": "^2.2.3",
     "reading-time": "^1.3.0",
     "remark": "^13.0.0",
@@ -30,10 +32,9 @@
     "remark-code-titles": "^0.1.1",
     "remark-html": "^13.0.1",
     "remark-slug": "^6.0.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
     "date-fns": "^2.21.3",
@@ -47,8 +48,8 @@
     "husky": "^5.1.1",
     "image-size": "^0.9.4",
     "lint-staged": "^10.5.4",
-    "postcss": "^8.2.6",
-    "postcss-preset-env": "^6.7.0",
+    "postcss": "^8.5.1",
+    "postcss-preset-env": "^10.1.3",
     "prettier": "^2.2.1",
     "react-icons": "^4.2.0",
     "rehype": "^11.0.0",
