--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@next/mdx": "^10.0.8",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@tailwindcss/typography": "^0.4.0",
     "dayjs": "^1.10.4",
     "gray-matter": "^4.0.2",
     "highlight.js": "^11.11.1",
@@ -31,11 +30,11 @@
     "remark-autolink-headings": "^6.0.1",
     "remark-code-titles": "^0.1.1",
     "remark-html": "^13.0.1",
-    "remark-slug": "^6.0.0",
-    "tailwindcss": "^4.0.3"
+    "remark-slug": "^6.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.20",
     "babel-eslint": "^10.1.0",
     "date-fns": "^2.21.3",
     "eslint": "^7.20.0",
@@ -57,6 +56,7 @@
     "remark-parse": "^9.0.0",
     "remark-stringify": "^9.0.1",
     "rss": "^1.2.2",
+    "tailwindcss": "^4.0.3",
     "unified": "^9.2.1",
     "unist-util-visit": "^2.0.3"
   }
